@@ -50,6 +50,7 @@
 package com.openexchange.sessiond.impl;
 
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import com.openexchange.crypto.CryptoService;
 import com.openexchange.exception.OXException;
@@ -67,6 +68,7 @@ import com.openexchange.sessionstorage.StoredSession;
 public class Obfuscator {
 
     private static final org.slf4j.Logger LOG = org.slf4j.LoggerFactory.getLogger(SessionImpl.class);
+
     private static final String[] WRAPPED_PARMETERS = { Session.PARAM_ALTERNATIVE_ID };
 
     private final String obfuscationKey;
@@ -85,9 +87,10 @@ public class Obfuscator {
      * Wraps a session before putting it to the storage.
      *
      * @param session The session
+     * @param remoteParameterNames The names of such parameters that are supposed to be taken over from session to stored session representation
      * @return the wrapped session
      */
-    public Session wrap(Session session) {
+    public Session wrap(Session session, List<String> remoteParameterNames) {
         if (null == session) {
             return null;
         }
@@ -95,6 +98,14 @@ public class Obfuscator {
         for (String param : WRAPPED_PARMETERS) {
             if (session.containsParameter(param)) {
                 parameters.put(param, session.getParameter(param));
+            }
+        }
+        if (null != remoteParameterNames) {
+            for (String parameterName : remoteParameterNames) {
+                Object value = session.getParameter(parameterName);
+                if (null != value) {
+                    parameters.put(parameterName, value);
+                }
             }
         }
         return new StoredSession(session.getSessionID(), session.getLoginName(), obfuscate(session.getPassword()), session.getContextId(),
@@ -106,15 +117,24 @@ public class Obfuscator {
      * Unwraps a session after getting it from the storage.
      *
      * @param session The session
+     * @param remoteParameterNames The names of such parameters that are supposed to be taken over from session to stored session representation
      * @return The unwrapped session
      */
-    public Session unwrap(Session session) {
+    public Session unwrap(Session session, List<String> remoteParameterNames) {
         if (null == session) {
             return null;
         }
         SessionImpl sessionImpl = new SessionImpl(session.getUserId(), session.getLoginName(), unobfuscate(session.getPassword()), session.getContextId(),
             session.getSessionID(), session.getSecret(), session.getRandomToken(), session.getLocalIp(), session.getLogin(),
             session.getAuthId(), session.getHash(), session.getClient(), false);
+        if (null != remoteParameterNames) {
+            for (String parameterName : remoteParameterNames) {
+                Object value = session.getParameter(parameterName);
+                if (null != value) {
+                    sessionImpl.setParameter(parameterName, value);
+                }
+            }
+        }
         for (String param : WRAPPED_PARMETERS) {
             if (session.containsParameter(param)) {
                 sessionImpl.setParameter(param, session.getParameter(param));
